avoid needing RACK_ENV defined

--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -1,5 +1,7 @@
 ---
-<%= ENV["RACK_ENV"] %>:
+development:
+  developer_mode: true
+production:
   error_collector:
     capture_source: true
     enabled: true
