--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,3 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
 development:
   adapter: postgresql
   encoding: unicode
@@ -13,17 +8,22 @@ development:
   host: localhost
   port: 5432
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: haidb_test
   pool: 5
-  timeout: 5000
+  username:
+  password:
+  host: localhost
+  port: 5432
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: haidb_production
   pool: 5
-  timeout: 5000
+  username:
+  password:
+  host: localhost
+  port: 5432
